themes/lucid/TimePicker.css
/* Time Picker */

/* override Button.css */
.lucid .dijitTimePicker .dijitButtonNode {
	padding: 0 0;
	border-radius: 0;
	-moz-border-radius: 0;
	-webkit-border-radius: 0;
}

/*.lucid .dijitTimePickerTick,*/
.lucid .dijitTimePickerMarker {
	border-bottom:  1px #c0ccdf solid !important;
}
.lucid .dijitTimePicker{
	border:1px #769dc0 solid !important;
	background-color:#fff !important;
	font-family:Verdana, Arial, Helvetica, sans-serif;
}
.lucid .dijitTimePickerTick {
	color:#666;
	border-top:solid 1px  #fff !important;
	border-bottom:  1px #c0ccdf solid !important;
	background-color:#f8f8f8;
}

.lucid .dijitTimePickerMarker {
	background:url("images/white_grad.png") repeat-x top;
	color:#000;
	font-size:.95em;
	border:solid 1px #769dc0 !important;
	background-color:#dadfe6;
	margin-top:-1px;
	margin-left:-1px;
	margin-right:-1px;
}
.lucid .dijitTimePickerItem{
	border:solid 1px transparent;
}
.lucid .dijitTimePickerItemSelected {
	color: #000;
	background:#7dbefa url("images/white_grad.png") repeat-x top;
	border:1px solid #769dc0 !important;
	margin-left:-1px;
	margin-right:-1px;
}

.lucid .dijitTimePickerItemHover{
	background: #abd6ff none;
	color:#000;
	border:1px solid #769dc0 !important;
	background:#abd6ff url("images/white_grad.png") repeat-x top;
	margin-left:-7px;
	margin-right:-7px;
}

.lucid .dijitTimePickerTick .dijitTimePickerItemInner {
	font-size:0.75em;
	padding:2px !important;
	margin:0 !important;
}

.lucid .dijitTimePickerItemHover .dijitTimePickerItemInner,
.lucid .dijitTimePickerItemSelected .dijitTimePickerItemInner {
	font-size:.95em;
	font-weight:bold;
	margin-left:-7px;
	margin-right:-7px;
}

.lucid .dijitTimePickerTickHover,
.lucid .dijitTimePickerTickSelected {
	margin-top:-1px;
}

.dijit_a11y .dijitTimePickerTickHover {
	background-color: #CCC !important;
	border-top: 1px solid #900 !important;
	border-bottom: none !important;
}

.dijit_a11y .dijitTimePickerMarkerHover {
	border-bottom-width: 0px;
}

/* add by wendong for arrow button */
.lucid .dijitTimePicker .dijitUpArrowButton,
.lucid .dijitTimePicker .dijitDownArrowButton {
	border: 1px solid #bcc8dd;
	background-color: #f6f7fa;
	background-image: url("form/images/menuButton_back.png");
	background-repeat: repeat-x;
}
.lucid .dijitTimePicker .dijitUpArrowButton .dijitArrowButtonInner,
.lucid .dijitTimePicker .dijitDownArrowButton .dijitArrowButtonInner{
	height: 100%; /* hack lucid.button.css */
	background-image: url("form/images/arrowup.png");
	background-repeat: no-repeat;
	background-position: 50% 50%;
	margin: 0;
	padding: 0;
}

.lucid .dijitTimePicker .dijitDownArrowButton .dijitArrowButtonInner{
	background-image: url("form/images/arrowdown.png");
}

/* hover */
.lucid .dijitTimePicker .dijitButtonNodeHover {
	background-color: #abd6ff;
	background-image: url("form/images/white_grad.png");
}

.lucid .dijitTimePicker .dijitButtonNodeHover .dijitArrowButtonInner{
	height: 100%; /* hack lucid.button.css */
	background-repeat: no-repeat;
	background-position: 50% 50%;
}
.lucid .dijitTimePicker .dijitButtonNodeHover.dijitUpArrowButton .dijitArrowButtonInner{
	background-image: url("form/images/arrowup_active.png");
}
.lucid .dijitTimePicker .dijitButtonNodeHover.dijitDownArrowButton .dijitArrowButtonInner{
	background-image: url("form/images/arrowdown_active.png");
} 

